allprojects {
    apply plugin: 'java'

    group = 'com.sugar_tree.inventoryshare'
    version = '2.0.1'

    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'

    compileJava.options.encoding = 'UTF-8'

    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            name = 'papermc-repo'
            url = "https://papermc.io/repo/repository/maven-public/"
        }
    }

    dependencies {
        compileOnly 'org.jetbrains:annotations:23.0.0'
    }
}

compileJava.enabled(false)

dependencies {
    implementation project(':InventoryShare-core')
}

jar {
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    duplicatesStrategy = 'EXCLUDE'
}